app/globals.css
@import url('https://fonts.googleapis.com/css2?family=Antic+Didone&family=Changa:wght@200..800&family=Jacques+Francois&family=Jacques+Francois+Shadow&display=swap');
@import "tailwindcss"; 

:root {
  --background: #FFE4ED;
  --foreground: #171717;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif;
}

.box {
  position: relative;
  justify-content: center;
  width: 600px;
  height: 450px;
  background-color: #FFBFDB;
  margin-left: auto;
  margin-right: auto;
  padding: 10px;
  font-family: "Antic Didone";
}

.header {
  position: relative;
  font-family: "Jacques Francois";
  font-size: 10px;
  text-align: center;
  margin: 20px;
}

.button1 {
  position: absolute;
  width: 90px;
  height: 35px;
  top: 10px;
  right: 8px;
  background-color: #FFFFFF;
  border-radius: 25px;
  border-width: 1px;
  font-size: 14px;
  font-family: "Jacques Francois Shadow";
  margin-bottom: 20px;
  transition-duration: 0.2s;
  z-index: 15;
}

  .button1:hover {
  background-color: gray;
  color: white;
  box-shadow: 3px 3px 1px black;
  }

  .button2 {
  position: absolute;
  width: 90px;
  height: 35px;
  top: 50px;
  right: 8px;
  background-color: #FFFFFF;
  border-radius: 25px;
  border-width: 1px;
  font-size: 14px;
  font-family: "Jacques Francois Shadow";
  margin-bottom: 20px;
  transition-duration: 0.2s;
  z-index: 15;
  }

  .button2:hover {
  background-color: grey;
  color: white;
  box-shadow: 3px 3px 1px black;
  }

  .button3 {
  position: absolute;
  width: 90px;
  height: 35px;
  top: 90px;
  right: 8px;
  background-color: #FFFFFF;
  border-radius: 25px;
  border-width: 1px;
  font-size: 14px;
  font-family: "Jacques Francois Shadow";
  transition-duration: 0.2s;
  margin-bottom: 20px;
  z-index: 15;
  }

  .button3:hover {
  background-color: grey;
  color: white;
  box-shadow: 3px 3px 1px black;
  }

  .button4 {
  position: absolute;
  width: 90px;
  height: 35px;
  top: 130px;
  right: 8px;
  background-color: #FFFFFF;
  border-radius: 25px;
  border-width: 1px;
  font-size: 14px;
  font-family: "Jacques Francois Shadow";
  transition-duration: 0.2s;
  margin-bottom: 20px;
  z-index: 15;
  }

  .button4:hover {
  background-color: grey;
  color: white;
  box-shadow: 3px 3px 1px black;
  }

  .icon {
    position: absolute;
    left: 20px;
    top: 118px;
  }

  .title {
    position: absolute;
    top: 163px;
    left: 155px;
    font-size: 20px;
    font-family: "Jacques Francois";
  }

  .aboutPaper {
    position: absolute;
    left: 105px;
    top: 160px;
    height: auto;
  }

  .aboutText {
    position: absolute;
    left: 174px;
    top: 240px;
    width: 280px;
    height: 300px;
    font-size: 8px;
    font-family: "Antic Didone";
  }

  .bunny {
    position: absolute;
    z-index: 5;
    top: 180px;
    left: 5px;
  }

  .sua {
    position: absolute;
    right: 5px;
    top: 170px;
    z-index: 6;
    transform: rotate(-20deg);
  }

  .wings {
    position: absolute;
    z-index: 5;
    top: 130px;
    left: 130px;
  }

  .pinkCharm {
    position: absolute;
    transform: rotate(10deg);
    left: 5px;
    top: 195px;
    height: auto;
  }

  .github {
    position: absolute;
    left: 200px;
    top: 200px;
    transition-duration: 0.2s;
    height: auto;
  }

  .linkedin {
    position: absolute;
    left: 335px;
    top: 268px;
    height: auto;
  }

  .outlook {
    position: absolute;
    left: 120px;
    top: 335px;
    height: auto;
  }

  .ribbon {
    position: absolute;
    z-index: 4;
    top: 395px;
    left: 0px;
  }

  .projectsPaper {
    position: absolute;
    left: 17px;
    bottom: 15px;
    box-shadow: 3px 3px 5px black;
    z-index: 4;
    height: auto;
  }

  .projectsText {
    position: absolute;
    width: 100px;
    height: 200px;
    top: 300px;
    left: 30px;
    font-size: 10px;
    z-index: 5;
  }

  .eous {
    position: absolute;
    top: 180px;
    left: 135px;
    z-index: 2;
  }
  
  .appLab {
    position: absolute;
    top: 285px;
    left: 140px;
    z-index: 5;
  }

  .searchBar1 {
    position: absolute;
    top: 45px;
    right: 25px;
    z-index: 3;
    height: auto;
  }

  .textBox1 {
    position: absolute;
    top: 5px;
    right: 40px;
    z-index: 4;
    height: auto;
    
  }

  .searchBar2 {
    position: absolute;
    top: 168px;
    right: -15px;
    z-index: 5;
    height: auto;
  }

  .textBox2 {
    position: absolute;
    top: 135px;
    right: 0px;
    z-index: 6;
    height: auto;
  }

  .eousTitle {
    position: absolute;
    font-family: "Changa";
    font-size: 12px;
    right: 85px;
    top: 205px;
    z-index: 10;
  }

  .sdvxTitle {
    position: absolute;
    font-family: "Changa";
    font-size: 12px;
    right: 80px;
    bottom: 103px;
    z-index: 10;
  }

  .eousDesc {
    position: absolute;
    font-family: "Antic Didone";
    width: 200px;
    height: 50px;
    font-size: 9px;
    z-index: 10;
    top: 245px;
    right: 80px;
  }

  .sdvxDesc {
    position: absolute;
    font-family: "Antic Didone";
    width: 190px;
    height: 50px;
    font-size: 8px;
    z-index: 10;
    bottom: 20px;
    right: 50px;
  }

  .madoka {
    position: absolute;
    z-index: 12;
    right: -10px;
    bottom: 160px;
  }

  .grace {
    position: absolute;
    z-index: 12;
    right: -30px;
    bottom: 60px;
  }

  .fatamoru {
    position: absolute;
    right: 125px;
    bottom: 10px;
    z-index: 2;
  }

  .metaphor {
    position: absolute;
    bottom: 75px;
    z-index: 3;
  }

  .chiral {
    position: absolute;
    z-index: 4;
    bottom: 10px;
    left: 60px;
  }

  .sdvx {
    position: absolute;
    left: 150px;
    top: 210px;
    z-index: 4;
  }

  .nier {
    position: absolute;
    right: 75px;
    top: 245px;
    z-index: 5;
  }

  .aoi {
    position: absolute;
    right: -10px;
    bottom: 0px;
    z-index: 6;
  }

  .angel {
    position: absolute;
    right: -65px;
    bottom: 65px;
    z-index: 6;
  }
  
  .popup {
    position: absolute;
    right: 50px;
    top: 170px;
    z-index: 7;
  }

  .notif {
    position: absolute;
    font-family: "Antic Didone";
    font-size: 6.5px;
    width: 160px;
    height: 25px;
    z-index: 8;
    right: 80px;
    top: 208px;
  }

  .bow {
    position: absolute;
    bottom: -50px;
    left: 0px;
    z-index: 10;
  }

  .kisaLeft {
    flex: 1;
    height: auto;
  }

  .kisaRight {
    flex: 1;
    transform: scaleX(-1);
    height: auto;
  }

  .container {
    display: flex;
    justify-content: space-around;
    margin: auto;
    gap: 5px;
    max-width: 900px;
    max-height: 450px;
  }

